compiler/src/test/resources/golden/errors/warn_deprecated_flat_spellings.dawn
# v0.4.0 transition (docs/stdlib-naming.md): the flat spellings still resolve,
# but each warns once per module — the module-qualified names are the way now.

pub fn main() -> Unit !io = {
  let m = map_insert(map_empty(), "k", 1)
  println("${map_size(m)}")
  println(trim("  x  "))
  println("${str_len("abc")}")
}
